baml_language/crates/baml_tests/snapshots/diagnostic_errors/unknown_type_error/baml_tests__diagnostic_errors__unknown_type_error__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
class user.Envelope {
  payload: unknown
}
enum user.Status {Active, Inactive}
function user.Bar(x: unknown_param_type) -> int  [expr] {
  {  } 1
}
function user.Baz() -> unknown_optional?  [expr] {
  {  } null
}
function user.Foo() -> blah  [expr] {
  {  } 1
}
function user.StatusTypoInTypePosition(s: user.Status.Typo) -> int  [expr] {
  {  } 1
}
function user.UnknownFieldAccess(raw: unknown) -> string  [expr] {
  {  } raw.email.to_lower_case()
}
function user.UnknownNestedFieldAccess(envelope: user.Envelope) -> string  [expr] {
  {  } envelope.payload.email
}
