baml_language/crates/baml_tests/snapshots/diagnostic_errors/unknown_type_error/baml_tests__diagnostic_errors__unknown_type_error__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Foo() -> unknown throws never {
  { : 1
    1 : 1
  }
  !! 131..136: unresolved type: blah
}
function user.Bar(x: unknown) -> int throws never {
  { : 1
    1 : 1
  }
  !! 210..229: unresolved type: unknown_param_type
}
function user.Baz() -> unknown? throws never {
  { : null
    null : null
  }
  !! 311..329: unresolved type: unknown_optional
}
