baml_language/crates/baml_tests/snapshots/diagnostic_errors/unknown_type_error/baml_tests__diagnostic_errors__unknown_type_error__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved type: blah
   ╭─[ unknown_type_error.baml:3:18 ]
   │
 3 │ function Foo() -> blah {
   │                  ──┬──  
   │                    ╰──── unresolved type: blah
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: unknown_param_type
   ╭─[ unknown_type_error.baml:8:16 ]
   │
 8 │ function Bar(x: unknown_param_type) -> int {
   │                ─────────┬─────────  
   │                         ╰─────────── unresolved type: unknown_param_type
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: unknown_optional
    ╭─[ unknown_type_error.baml:13:18 ]
    │
 13 │ function Baz() -> unknown_optional? {
    │                  ─────────┬────────  
    │                           ╰────────── unresolved type: unknown_optional
    │ 
    │ Note: Error code: E0002
────╯
