baml_language/crates/baml_tests/snapshots/diagnostic_errors/unknown_type_error/baml_tests__diagnostic_errors__unknown_type_error__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Bar(x: void) -> int {
    load_const 1
    return
}

function user.Baz() -> void? {
    load_const null
    return
}

function user.Foo() -> void {
    load_const 1
    return
}
